# Whatsapp_AI_Multi_Agents

./: .gitignore  Dockerfile  README.md  Webhook.py  app_streamlit.py  payload.json  pyproject.toml  requirements.txt
.github/workflows/: aicontainer-AutoDeployTrigger-d99a583d-165c-4705-a68b-d9a22c5bcfbf.yml
app/: config.py  main.py  testeia.py
app/Models/: Database.py  Db_Insert.py  Models.py
app/Routers/: Webhook.py
app/Services/: auth_service.py  email_sender.py  ia_service.py  process_message.py  storage_service.py  whatsapp_sender.py
